# qb-compiler

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  ROADMAP_DRAFT.md  SECURITY.md  docker-compose.yml  ecosystem.toml  pyproject.toml  requirements-dev-lock.txt  requirements-lock.txt
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  fuzz.yml  lock-refresh.yml  nightly-calibration.yml  release.yml
benchmarks/: README.md  run_benchmarks.py
benchmarks/circuits/qaoa/: maxcut_4q.qasm  maxcut_8q.qasm
benchmarks/circuits/qft/: qft_16q.qasm  qft_8q.qasm
benchmarks/circuits/random/: random_10q_depth30.qasm  random_5q_depth20.qasm
benchmarks/circuits/vqe/: h2_4q.qasm  h2_8q.qasm
benchmarks/ising/: pymatching_sweep.json  run_pymatching_sweep.py
docs/: RELEASE.md  SIGNING.md  architecture.rst  calibration-guide.rst  cli-reference.rst  conf.py  contributing.rst  custom-passes.rst  faq.rst  getting-started.rst  index.rst  migration-from-qiskit.rst  optimization-guide.rst
docs/api/: backends.rst  compiler.rst  index.rst  passes.rst
docs/design/: v050_telemetry_surface.md
docs/tutorials/: 01-basic-compilation.ipynb  02-calibration-aware.ipynb  03-budget-aware.ipynb  04-qec-aware.ipynb  hardware_validation_walkthrough.ipynb
examples/: 01_basic_compile.py  02_calibration_mapping.py  03_noise_aware_routing.py  04_fidelity_estimation.py  05_qiskit_integration.py  06_full_pipeline.py  07_custom_pass.py  08_multi_backend_comparison.py  09_from_qiskit.py  10_real_calibration.py  11_ml_layout_prediction.py  12_full_stack_demo.py  13_viability_check.py  14_backend_recommendation.py  15_circuit_type_detection.py  16_cost_estimation.py  17_compilation_receipt.py
junk/: _gen_19.py  _gen_20.py
notebooks/: 01_preflight_viability.ipynb  02_compilation_receipts.ipynb  03_multi_vendor_ranking.ipynb  04_dynamical_decoupling.ipynb  05_fidelity_estimation.ipynb  06_cost_estimation.ipynb  07_calibration_data.ipynb  08_qiskit_integration.ipynb  09_ml_layout_prediction.ipynb  10_circuit_ir.ipynb  11_compilation_strategies.ipynb  12_error_handling.ipynb  13_qubitboost_integration.ipynb  14_backend_deep_dive.ipynb  15_cli_workflows.ipynb  16_real_world_pipelines.ipynb  17_nvidia_ising_integration.ipynb  18_ising_pymatching_baseline_sweep.ipynb  19_know_before_you_run.ipynb  20_proof_not_promises.ipynb  22_willow_complementary_gap_validation.ipynb  22_willow_complementary_gap_validation.py
results/: benchmark_qiskit_vs_dd.json  benchmark_rich_circuits.json  final_validation.json  hardware_validation_dd.json  hardware_validation_v2.json  hardware_validation_v2_dryrun.json  hardware_validation_v3_dryrun.json  validation_20260314_143516.json  validation_fez.json  validation_fez_live.json  validation_layout_vs_qiskit.json  validation_post_routing_local.json  validation_vs_qiskit_best_seed.json
sbom/: README.md  generate_sbom.py  sbom.json
scripts/: benchmark_all_phases.py  benchmark_fidelity.py  benchmark_gnn_vs_xgboost.py  benchmark_ml_router.py  benchmark_phase_comparison.py  benchmark_qiskit_vs_dd.py  benchmark_readme.py  diagnose_candidates.py  fetch_calibration_snapshot.py  final_validation.py  generate_benchmark_circuits.py  hardware_validation.py  hardware_validation_dd.py  hardware_validation_v2.py  hardware_validation_v3.py  local_post_routing_validation.py  multi_snapshot_comparison.py  process_dd_results.py  save_validation_results.py  tiebreaker_demo.py  verify_provenance.sh
src/qb_compiler/: __init__.py  _store.py  _version.py  compiler.py  config.py  discovery.py  exceptions.py  qec_preflight.py  receipts.py  recommender.py  verify.py  viability.py  windows.py
src/qb_compiler/backends/: __init__.py  base.py
src/qb_compiler/calibration/: __init__.py  cached_provider.py  live_provider.py  provider.py  static_provider.py
src/qb_compiler/cli/: __init__.py  main.py
src/qb_compiler/cost/: __init__.py  budget_optimizer.py  estimator.py  pricing.py  shot_budget.py
src/qb_compiler/integrations/: __init__.py  qubitboost.py
src/qb_compiler/ir/: __init__.py  circuit.py  dag.py  operations.py
src/qb_compiler/ising/: README.md  __init__.py  decoder.py  patch_spec.py  qiskit_bridge.py  stim_adapter.py
src/qb_compiler/ml/: __init__.py  data_generator.py  data_generator_v2.py  features.py  gnn_router.py  layout_predictor.py  rl_router.py  train.py  train_v2.py
src/qb_compiler/noise/: __init__.py  empirical_model.py  fidelity_estimator.py  ml_model.py  noise_model.py
src/qb_compiler/passes/: __init__.py  base.py
src/qb_compiler/qiskit_plugin/: __init__.py  analysis_passes.py  calibration_pass.py  pass_manager.py  transformation_passes.py  transpiler_plugin.py
src/qb_compiler/strategies/: __init__.py  base.py  budget_aware.py  cost_optimal.py  depth_optimal.py  fidelity_optimal.py  speed_optimal.py
src/qb_compiler/telemetry/: __init__.py  collector.py
tests/: conftest.py
tests/benchmarks/: bench_compilation_time.py  bench_fidelity_improvement.py  bench_vs_qiskit_default.py
tests/fixtures/calibration_snapshots/: ibm_fez_2026_02_15.json  ibm_fez_2026_03_12.json  rigetti_ankaa_2026_02_15.json
tests/fixtures/circuits/: bell_state.qasm  qaoa_maxcut_4q.qasm  qft_16q.qasm  vqe_h2_8q.qasm
tests/fuzz/: README.md  fuzz_calibration_parser.py  fuzz_circuit_ir.py  fuzz_cli_input.py  fuzz_compiler_config.py  fuzz_qasm_parser.py
tests/integration/: test_full_pipeline.py  test_multi_backend.py  test_qiskit_entry_point.py  test_qiskit_plugin.py  test_staged_passmanager.py
tests/unit/: test_best_of_n.py  test_cli.py  test_compiler.py  test_discovery.py  test_error_budget.py  test_golden_path.py  test_integrations.py  test_qec_preflight.py  test_receipts.py  test_recommender.py  test_verify.py  test_viability.py  test_windows.py
tests/unit/test_backends/: test_ibm_adapter.py  test_native_gates.py  test_rigetti_adapter.py
tests/unit/test_calibration/: test_models.py  (+1 more)
(+87 files in other folders)
