[build-system]
requires = ["hatchling>=1.25.0", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "qb-compiler"
dynamic = ["version"]
description = "Quantum execution intelligence. Circuit viability, backend recommendation, cost estimation, and automatic optimizations for quantum computing."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "QubitBoost", email = "mike@qubitboost.io" },
]
keywords = [
    "quantum", "compiler", "transpiler", "calibration", "noise-aware",
    "qiskit", "quantum-computing", "qec", "error-correction", "qubitboost",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Compilers",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24,<3.0",
    "rustworkx>=0.14",
    "qiskit>=1.0,<3.0",
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
qubitboost = [
    "qubitboost-sdk>=2.4",
]
rigetti = ["pyquil>=4.0"]
ionq = ["amazon-braket-sdk>=1.60"]
iqm = ["iqm-client>=17.0"]
ml = [
    "xgboost>=2.0",
    "scikit-learn>=1.4",
]
gnn = [
    "torch>=2.0",
]
all = [
    "qb-compiler[qubitboost,rigetti,ionq,iqm,ml,gnn]",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-benchmark>=4.0",
    "pytest-timeout>=2.2",
    "pytest-mock>=3.12",
    "ruff>=0.5.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6",
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=3.0",
    "nbsphinx>=0.9",
    "xgboost>=2.0",
    "scikit-learn>=1.4",
    "torch>=2.0",
]

[project.scripts]
qbc = "qb_compiler.cli.main:cli"

[project.entry-points."qiskit.transpiler.stage"]
qb_calibration = "qb_compiler.qiskit_plugin:QBTranspilerPlugin"

[project.urls]
Homepage = "https://qubitboost.io/compiler"
Documentation = "https://docs.qubitboost.io/compiler"
Repository = "https://github.com/mwpwalshe/qb-compiler"
Issues = "https://github.com/mwpwalshe/qb-compiler/issues"
Changelog = "https://github.com/mwpwalshe/qb-compiler/blob/master/CHANGELOG.md"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.hatch.build.targets.wheel]
packages = ["src/qb_compiler"]

[tool.hatch.build.targets.sdist]
exclude = [
    "*:Zone.Identifier",
    "tests/fixtures/calibration_snapshots/*.json",
    ".github/",
    "benchmarks/",
    "docs/",
    "examples/",
    "scripts/",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "TCH", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["qb_compiler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "unit: Unit tests (fast, no I/O)",
    "integration: Integration tests (may need extras)",
    "benchmark: Performance benchmarks",
    "requires_qiskit: Requires qiskit extra",
    "requires_cirq: Requires cirq extra",
    "requires_braket: Requires braket extra",
    "slow: Tests that take >10s",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/qb_compiler"]
branch = true
omit = [
    "*/cli/*",
    "*/telemetry/*",
    "*/ml/train.py",
    "*/ml/data_generator.py",
    "*/qiskit_plugin/*",
    "*/qec/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "\\.{3}$",
]
fail_under = 60
show_missing = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "qiskit.*",
    "rustworkx.*",
    "qubitboost_sdk.*",
    "sklearn.*",
    "xgboost.*",
    "torch.*",
]
ignore_missing_imports = true
ignore_errors = true
